[Bug #3124] - clipped dropdown menu in Contents view

--- a/theme/themes/pastanaga/extras/contents.less
+++ b/theme/themes/pastanaga/extras/contents.less
@@ -80,7 +80,8 @@
 
   .contents-table-wrapper {
     width: 100%;
-    overflow-x: auto;
+    //#3124 - dropdown menus are clipped when table has few or no records 
+    //overflow-x: auto;
 
     .ui.attached.table {
       width: 100%;
